<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@color/transparent_black"
    tools:context=".InterfaceScreen.ConstructionScreen.ExerciseScreen.CreateExerciseFragment">

      <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="120dp"
        android:elevation="20dp"
        app:cardCornerRadius="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/blue">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:text="@string/name_programm_in_create_list"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:layout_marginHorizontal="10dp"/>
                </RelativeLayout>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editExerciseName"
                    android:background="@drawable/custom_input"
                    android:padding="13dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:layout_marginHorizontal="10dp"
                    android:hint="@string/hint_name_create_program"
                    android:textColor="#000000"
                    android:textColorHint="@color/hint_color" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/blue">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:text="@string/muscle_groups"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:layout_marginHorizontal="10dp"/>
                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <CheckBox
                        android:id="@+id/pressCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/blue"
                        android:layout_marginLeft="10dp"
                        style="@style/CheckBoxStyle" />

                    <ImageView
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_chest"
                        app:tint="@color/blue" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:textSize="18dp"
                        android:text="@string/press"
                        android:textColor="@color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/armCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/blue"
                        android:layout_marginLeft="10dp"
                        style="@style/CheckBoxStyle" />

                    <ImageView
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_arm"
                        app:tint="@color/blue" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:textSize="18dp"
                        android:text="@string/arm"
                        android:textColor="@color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/backCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/blue"
                        android:layout_marginLeft="10dp"
                        style="@style/CheckBoxStyle" />

                    <ImageView
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:layout_marginLeft="5dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_back"
                        app:tint="@color/blue" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:textSize="18dp"
                        android:text="@string/back"
                        android:textColor="@color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/chestCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/blue"
                        android:layout_marginLeft="10dp"
                        style="@style/CheckBoxStyle" />

                    <ImageView
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_chest"
                        app:tint="@color/blue" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:textSize="18dp"
                        android:text="@string/chest"
                        android:textColor="@color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/legCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/blue"
                        android:layout_marginLeft="10dp"
                        style="@style/CheckBoxStyle" />

                    <ImageView
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_leg"
                        app:tint="@color/blue" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:textSize="18dp"
                        android:text="@string/leg"
                        android:textColor="@color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <CheckBox
                        android:id="@+id/shoulderCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/blue"
                        android:layout_marginLeft="10dp"
                        style="@style/CheckBoxStyle" />

                    <ImageView
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_shoulder"
                        app:tint="@color/blue" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:textSize="18dp"
                        android:text="@string/shoulder"
                        android:textColor="@color/black"/>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/blue">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:text="Описание программы"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:layout_marginHorizontal="10dp"/>
                </RelativeLayout>


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editExerciseAbout"
                    android:background="@drawable/custom_input"
                    android:padding="13dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:layout_marginHorizontal="10dp"
                    android:hint="@string/about_programm_in_create_list"
                    android:textColor="#000000"
                    android:textColorHint="@color/hint_color" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/blue">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:text="@string/image_programm_in_create_list"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:layout_marginHorizontal="10dp"/>
                </RelativeLayout>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginVertical="20dp"
                    android:layout_marginHorizontal="10dp"
                    app:cardCornerRadius="20dp"
                    android:layout_marginBottom="20dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/sport_men"
                        android:scaleType="centerCrop"/>

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/createExerciseButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create"
                    android:textSize="14dp"
                    android:layout_marginBottom="20dp"
                    style="@style/RoundedCornerButton"
                    android:layout_marginHorizontal="80dp"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_rounder_corner"/>



            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

</RelativeLayout>