<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:background="@color/transparent_black"
    tools:context=".ui.ConstructionScreen.TrainingScreen.AddPoint.AddPointExersiseFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:orientation="vertical">

                <TextView
                    android:paddingTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/repeat1"
                    android:gravity="center" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:cardCornerRadius="50dp"
                    android:layout_gravity="center">

                    <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
                        android:id="@+id/counter_repeat"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:backGroundColor="@color/blue"
                        android:gravity="center"
                        app:textSize="10dp" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:orientation="vertical">

                <TextView
                    android:paddingTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/weight1"
                    android:gravity="center" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:cardCornerRadius="50dp"
                    android:layout_gravity="center">

                    <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
                        android:id="@+id/counter_weight"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:backGroundColor="@color/blue"
                        android:gravity="center"
                        app:textSize="10dp" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:orientation="vertical">

                <TextView
                    android:paddingTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/time_and_min"
                    android:gravity="center" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:cardCornerRadius="50dp"
                    android:layout_gravity="center">

                    <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
                        android:id="@+id/counter_time"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:backGroundColor="@color/blue"
                        android:gravity="center"
                        app:textSize="10dp" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <TextView
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="название"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="20dp"/>

            <Button
                android:id="@+id/createButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/create"
                android:textColor="@color/white"
                android:background="@drawable/btn_rounder_corner"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/myAddPointExersiseRecyclerview"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>